@@ -85,8 +85,7 @@ static int	calcitem_add_function(expression_t *exp, char *func, char *params)
 	return f->functionid;
 }
 
-static int	calcitem_parse_expression(DC_ITEM *dc_item, expression_t *exp,
-		char *error, int max_error_len)
+static int	calcitem_parse_expression(DC_ITEM *dc_item, expression_t *exp, char *error, int max_error_len)
 {
 	const char	*__function_name = "calcitem_parse_expression";
 	char		*e, *f, *func = NULL, *params = NULL;
@@ -138,8 +137,7 @@ static int	calcitem_parse_expression(DC_ITEM *dc_item, expression_t *exp,
 	return ret;
 }
 
-static int	calcitem_evaluate_expression(DC_ITEM *dc_item, expression_t *exp,
-		char *error, int max_error_len)
+static int	calcitem_evaluate_expression(DC_ITEM *dc_item, expression_t *exp, char *error, int max_error_len)
 {
 	const char	*__function_name = "calcitem_evaluate_expression";
 	function_t	*f = NULL;
@@ -318,6 +316,17 @@ int	get_value_calculated(DC_ITEM *dc_item, AGENT_RESULT *result)
 	}
 
 	zabbix_log(LOG_LEVEL_DEBUG, "%s() value:" ZBX_FS_DBL, __function_name, value);
+
+	if (ITEM_VALUE_TYPE_UINT64 == dc_item->value_type && 0 > value)
+	{
+		SET_MSG_RESULT(result, zbx_dsprintf(NULL,
+				"Received value [" ZBX_FS_DBL "] is not suitable"
+				" for value type [%s] and data type [%s]",
+				value, zbx_item_value_type_string(dc_item->value_type),
+				zbx_item_data_type_string(dc_item->data_type)));
+		ret = NOTSUPPORTED;
+		goto clean;
+	}
 
 	SET_DBL_RESULT(result, value);
 clean:
